Complete initial landing page design and nav links

--- a/src/apps/cs-dotcom/containers/Homepage/Homepage.module.css
+++ b/src/apps/cs-dotcom/containers/Homepage/Homepage.module.css
@@ -1,3 +1,10 @@
 .Homepage {
-  color: blue;
+  display: grid;
+  grid-template-columns: 55% 45%;
+}
+
+@media (max-width: 499px) {
+  .Homepage {
+    display: inline;
+  }
 }
