Implement Resume page with employment history, fix scroll to top bug when switching routes, various bug fixes and tweaks for home page responsiveness, add HomeButton component for quick nav back to home page

--- a/src/apps/shared-components/navigation/SideDrawer/DrawerToggle/DrawerToggle.module.css
+++ b/src/apps/shared-components/navigation/SideDrawer/DrawerToggle/DrawerToggle.module.css
@@ -15,3 +15,12 @@
   height: 3px;
   background-color: black;
 }
+
+.DrawerToggle img {
+  height: 3em;
+  opacity: 0.5;
+}
+
+.DrawerToggle img:hover {
+  opacity: 1;
+}
