--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+html,
+body {
+  width: auto !important;
+  overflow-x: hidden !important;
+  background-color: #eeeeee;
+}
