--- a/src/apps/cs-dotcom/components/Resume/EducationItem/EducationItem.module.css
+++ b/src/apps/cs-dotcom/components/Resume/EducationItem/EducationItem.module.css
@@ -1,4 +1,4 @@
-.ResumeItem {
+.EducationItem {
   margin-bottom: 1em;
   margin-top: 1em;
   border: 1px solid #dcdcdc;
@@ -8,14 +8,6 @@
 }
 
 @media (max-width: 499px) {
-  .ResumeItems {
-    padding: 0.3em;
-  }
-  li {
-    font-size: 0.8em;
-    margin-left: -2em;
-  }
-
   p {
     font-size: 0.8em;
   }
