--- a/src/apps/shared-components/navigation/NavigationItem/NavigationItem.module.css
+++ b/src/apps/shared-components/navigation/NavigationItem/NavigationItem.module.css
@@ -12,5 +12,11 @@
   padding: 16px 10px;
   border-bottom: 4px solid transparent;
   text-decoration: none;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
+}
+
+@media (max-width: 499px) {
+  .NavigationItem a {
+    font-size: 1rem;
+  }
 }
