--- a/src/apps/cs-dotcom/components/Resume/ResumeItem/ResumeItem.module.css
+++ b/src/apps/cs-dotcom/components/Resume/ResumeItem/ResumeItem.module.css
@@ -5,6 +5,7 @@
   background-color: #dcdcdc;
   padding: 1em;
   border-radius: 45px;
+  box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.38);
 }
 
 @media (max-width: 499px) {
