--- a/src/apps/shared-components/navigation/SideDrawer/SideDrawer.module.css
+++ b/src/apps/shared-components/navigation/SideDrawer/SideDrawer.module.css
@@ -10,6 +10,7 @@
   padding: 32px 16px;
   box-sizing: border-box;
   transition: transform 0.3s ease-out;
+  box-shadow: inset -7px 0px 15px -5px darkgray;
 }
 
 .Open {
