Convert site to dark layout, reduce border-radius of elements by 25px, change font to Rubik, tweak various element/text colors, add background opacity to information cards throughout site

--- a/src/apps/cs-dotcom/components/Homepage/InfoPanelItem/InfoPanelItem.module.css
+++ b/src/apps/cs-dotcom/components/Homepage/InfoPanelItem/InfoPanelItem.module.css
@@ -2,6 +2,10 @@
   animation: blinker 0.8s linear infinite;
 }
 
+.InfoPanelItemHeaderText {
+  color: #24cc44;
+}
+
 @keyframes blinker {
   50% {
     opacity: 0;
