--- a/src/apps/shared-components/navigation/NavigationItem/NavigationItem.module.css
+++ b/src/apps/shared-components/navigation/NavigationItem/NavigationItem.module.css
@@ -7,7 +7,7 @@
 }
 
 .NavigationItem a {
-  color: black;
+  color: #ebebed;
   height: 100%;
   padding: 16px 10px;
   border-bottom: 4px solid transparent;
