--- a/src/apps/cs-dotcom/components/Homepage/InfoPanel/InfoPanel.module.css
+++ b/src/apps/cs-dotcom/components/Homepage/InfoPanel/InfoPanel.module.css
@@ -2,14 +2,12 @@
   width: 100%;
   height: auto;
   padding: 4px;
-  border-bottom-left-radius: 45px;
-  border-top-right-radius: 45px;
+  border-radius: 20px;
 }
 
 @media (max-width: 499px) {
   .InfoPanelImage img {
     padding: 0px;
-    border-bottom-left-radius: 0px;
-    border-top-right-radius: 0px;
+    border-radius: 0px;
   }
 }
