--- a/src/apps/cs-dotcom/components/Resume/EducationItem/EducationItem.module.css
+++ b/src/apps/cs-dotcom/components/Resume/EducationItem/EducationItem.module.css
@@ -1,10 +1,9 @@
 .EducationItem {
   margin-bottom: 1em;
   margin-top: 1em;
-  border: 1px solid #dcdcdc;
-  background-color: #dcdcdc;
   padding: 1em;
-  border-radius: 45px;
+  border-radius: 20px;
+  background: rgba(75, 75, 75, 0.3);
   box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.38);
 }
 
