--- a/src/apps/cs-dotcom/containers/Contact/Contact.module.css
+++ b/src/apps/cs-dotcom/containers/Contact/Contact.module.css
@@ -1,9 +1,8 @@
 .Contact {
   margin: 1em 23em 1em 23em;
-  border: 1px solid #dcdcdc;
-  background-color: #dcdcdc;
   padding: 1em;
-  border-radius: 45px;
+  border-radius: 20px;
+  background: rgba(75, 75, 75, 0.3);
   box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.38);
 }
 
@@ -13,7 +12,7 @@
 
 .ContactItem a {
   text-decoration: none;
-  color: black;
+  color: #ebebed;
 }
 
 .ContactText {
