--- a/src/apps/shared-components/navigation/HomeButton/HomeButton.module.css
+++ b/src/apps/shared-components/navigation/HomeButton/HomeButton.module.css
@@ -1,19 +1,9 @@
-.HomeButton img {
-  width: 50px;
+.HomeButton {
   z-index: 100;
   position: fixed;
   cursor: pointer;
   right: 1%;
-  opacity: 0.5;
-}
-
-.HomeButton img:hover {
-  opacity: 1;
-}
-
-@media (max-width: 499px) {
-  .HomeButton img {
-    right: 4%;
-    top: 1%;
-  }
+  color: white;
+  text-decoration: none;
+  top: 1%;
 }
