--- a/src/apps/shared-components/navigation/SideDrawer/SideDrawer.module.css
+++ b/src/apps/shared-components/navigation/SideDrawer/SideDrawer.module.css
@@ -6,11 +6,10 @@
   left: 0;
   top: 0;
   z-index: 200;
-  background-color: white;
+  background-color: #1e1e1e;
   padding: 32px 16px;
   box-sizing: border-box;
-  transition: transform 0.3s ease-out;
-  box-shadow: inset -7px 0px 15px -5px darkgray;
+  transition: transform 0.3s ease-in-out;
 }
 
 .Open {
