--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,23 @@ body {
   background-size: cover;
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url("https://chrisslaight.com/images/black-smooth-textured-paper.jpg")
+    no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 #bg-image-attribution-link {
   text-align: center;
 }
