Pull all resume and project data from database, build out admin modules for all database-sourced data to edit in UI

--- a/src/apps/cs-dotcom/components/Homepage/InfoPanel/InfoPanel.module.css
+++ b/src/apps/cs-dotcom/components/Homepage/InfoPanel/InfoPanel.module.css
@@ -5,9 +5,16 @@
   border-radius: 20px;
 }
 
+.InfoPanelContent {
+  margin-top: -5rem;
+}
+
 @media (max-width: 499px) {
   .InfoPanelImage img {
     padding: 0px;
     border-radius: 0px;
+  }
+  .InfoPanelContent {
+    margin-top: -7rem;
   }
 }
