--- a/src/apps/cs-dotcom/containers/Admin/Resume/EducationAdmin/EducationAdmin.module.css
+++ b/src/apps/cs-dotcom/containers/Admin/Resume/EducationAdmin/EducationAdmin.module.css
@@ -1,9 +1,9 @@
-.EmploymentCard {
+.EducationCard {
   margin: auto;
   width: 80%;
 }
 
-.EmploymentForm textarea {
+.EducationForm textarea {
   width: 100%;
   height: 500px;
   color: #bb8c71;
@@ -11,7 +11,7 @@
 }
 
 @media (max-width: 499px) {
-  .EmploymentCard {
+  .EducationCard {
     width: 98% !important;
   }
 }
