--- a/src/apps/cs-dotcom/containers/Admin/Resume/SkillsAdmin/SkillsAdmin.module.css
+++ b/src/apps/cs-dotcom/containers/Admin/Resume/SkillsAdmin/SkillsAdmin.module.css
@@ -1,9 +1,9 @@
-.EmploymentCard {
+.SkillsCard {
   margin: auto;
   width: 80%;
 }
 
-.EmploymentForm textarea {
+.SkillsForm textarea {
   width: 100%;
   height: 500px;
   color: #bb8c71;
@@ -11,7 +11,7 @@
 }
 
 @media (max-width: 499px) {
-  .EmploymentCard {
+  .SkillsCard {
     width: 98% !important;
   }
 }
