--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,13 @@ html,
 body {
   width: auto !important;
   overflow-x: hidden !important;
-  background-color: #1e1e1e;
-  background-image: url("https://chrisslaight.com/images/black-smooth-textured-paper.jpg");
+  background-color: #121212;
+  /* background-image: url("https://chrisslaight.com/images/black-smooth-textured-paper.jpg"); */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  background: rgba(0, 0, 0, 0);
+  background: #121212;
   background-attachment: scroll;
 }
 
@@ -35,24 +35,11 @@ body:before {
   width: 100%;
   height: 100%;
   z-index: -10;
-  background: url("https://chrisslaight.com/images/black-smooth-textured-paper.jpg")
-    no-repeat center center;
+  /* background: url("https://chrisslaight.com/images/black-smooth-textured-paper.jpg") */
+    /* no-repeat center center; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-attachment: scroll;
-}
-
-#bg-image-attribution-link {
-  text-align: center;
-}
-
-#bg-image-attribution-link a {
-  text-decoration: none;
-  color: lightgrey;
-  opacity: 0.5;
-  font-size: 0.8em;
-  bottom: 0;
-  width: 100%;
 }
