Refactor authentication to use useContext and Firebase REST API, add loading spinner to data-loaded pages, re-design resume page to show columns on desktop, change background color to lighter shade of gray, update styling of login form, add logged in user email to admin page, implement asyncComponent wrapper for lazy loading to increase app performance.

--- a/src/apps/cs-dotcom/components/Resume/ResumeItems/ResumeItems.module.css
+++ b/src/apps/cs-dotcom/components/Resume/ResumeItems/ResumeItems.module.css
@@ -1,12 +1,21 @@
 .ResumeItems {
-  margin-left: 10em;
-  margin-right: 10em;
+  margin-left: 2em;
+  margin-right: 2em;
   text-align: left;
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
 }
 
-@media (max-width: 499px) {
+.ResumeItemColumn {
+  padding: 0 10px;
+}
+
+.ResumeItemColumn h2 {
+  text-align: center;
+}
+
+@media (max-width: 1199px) {
   .ResumeItems {
-    margin-left: 2em;
-    margin-right: 2em;
+    display: inline;
   }
 }
