--- a/src/apps/cs-dotcom/components/Login/LoginForm/LoginForm.module.css
+++ b/src/apps/cs-dotcom/components/Login/LoginForm/LoginForm.module.css
@@ -21,9 +21,13 @@
 }
 
 .FormItems input {
-  border-radius: 10px;
   padding: 10px;
   margin: 5px;
+  background: rgba(0, 0, 0, 0);
+  border: none;
+  border-bottom: 2px solid white;
+  color: white;
+  font-size: 1em;
 }
 
 @media (max-width: 699px) {
