Add new PrintableResume component for printer-friendly version of resume, add additional colors and icons throughout UI, redesign Resume component to utilize grid columns for cleaner look on desktop viewports, various small style changes, change homepage cover photo

--- a/src/apps/cs-dotcom/components/Resume/SkillsItem/SkillsItem.module.css
+++ b/src/apps/cs-dotcom/components/Resume/SkillsItem/SkillsItem.module.css
@@ -10,13 +10,13 @@
 .SkillsLevel1 {
   font-size: 2rem;
   text-shadow: 0px 0px 10px #fff;
-  box-shadow: 0px 0px 10px #fff;
+  box-shadow: 0px 0px 10px #24cc44;
 }
 
 .SkillsLevel2 {
   font-size: 1.5rem;
   text-shadow: 0px 0px 5px #fff;
-  box-shadow: 0px 0px 5px #fff;
+  box-shadow: 0px 0px 5px #24cc44;
 }
 
 .SkillsLevel3 {
